syntax="proto3";

package iomomi_pb;

enum Dir {
	PosX = 0;
	NegX = 1;
	PosY = 2;
	NegY = 3;
	PosZ = 4;
	NegZ = 5;
}
